--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Interview</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="password">Password</string>
+    <string name="name">Name</string>
+    <string name="fname">Firstname</string>
+    <string name="email">Email</string>
+    <string name="cpassword">Confirm Password</string>
 </resources>
